--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "emailjs-com": "^3.2.0",
     "formik": "^2.4.6",
+    "i18next": "^25.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
     "yup": "^1.6.1"
