--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
+    "swiper": "^11.2.6",
     "yup": "^1.6.1"
   },
   "devDependencies": {
