--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.4.6",
     "i18next": "^25.1.2",
     "i18next-http-backend": "^3.0.2",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
